Ghetto (and manual) twitter feed using oembed.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 .eslintcache
 node_modules
 
+# Ignore generated data
+public/data/
+
 # Do not check in credentials
 credentials.json
 credentials-*.json
