--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "commander": "^2.17.1",
     "got": "^11.8.2",
+    "luxon": "^1.27.0",
     "needle": "^2.6.0",
     "oauth-1.0a": "^2.2.6",
     "twitter-v2": "^1.1.0",
