--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "firebase-functions-test": "^0.2.3",
-    "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
+    "sass": "^1.34.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.12"
   }
